[gd_scene load_steps=13 format=3 uid="uid://bvg0wkkoge818"]

[ext_resource type="Script" uid="uid://bcfp7q1qbuq87" path="res://scenes/card_preview.gd" id="1_i255k"]
[ext_resource type="Theme" uid="uid://bdhp2uvk0sxwp" path="res://themes/war_theme.tres" id="2_sq1vt"]
[ext_resource type="StyleBox" uid="uid://bqinv653pww8w" path="res://themes/new_style_box_neon_red_outline.tres" id="3_pcc5x"]
[ext_resource type="StyleBox" uid="uid://d05bpcp4qfi5u" path="res://themes/new_style_box_neon_glow.tres" id="4_vmjko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4ak7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebsbl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oeh2m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_civ8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a11yk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5m4o"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_size = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnwuq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yx2ii"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i255k")

[node name="Panel_Cover" type="Panel" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 350.0
theme = ExtResource("2_sq1vt")
theme_override_styles/panel = ExtResource("3_pcc5x")

[node name="Label_Name" type="Label" parent="Panel_Cover"]
layout_mode = 0
offset_left = 2.0
offset_top = 49.0
offset_right = 247.0
offset_bottom = 77.0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 14
text = "CARD NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label_Cost" type="Label" parent="Panel_Cover"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -39.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 30.0
grow_horizontal = 0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 20
text = "Xcr"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Label_Type" type="Label" parent="Panel_Cover"]
layout_mode = 0
offset_left = 2.0
offset_top = 9.0
offset_right = 195.0
offset_bottom = 32.0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 14
text = "UNIT-MAN"
vertical_alignment = 1
autowrap_mode = 2

[node name="Label_Text" type="Label" parent="Panel_Cover"]
layout_mode = 0
offset_left = 1.0
offset_top = 100.0
offset_right = 247.0
offset_bottom = 313.0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 12
text = "DESCRIPTION BLABLABLASGBLABLA "
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label_Health" type="Label" parent="Panel_Cover"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 24
text = "XX"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 2

[node name="Label_Power" type="Label" parent="Panel_Cover"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_right = 61.0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 24
text = "XX"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label_Training" type="Label" parent="Panel_Cover"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -28.0
offset_right = 13.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 20
text = "XX"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="Panel_Cover"]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = ExtResource("4_vmjko")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_j4ak7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ebsbl")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_oeh2m")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_civ8m")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_a11yk")
theme_override_styles/hover = SubResource("StyleBoxFlat_p5m4o")
theme_override_styles/pressed_mirrored = ExtResource("4_vmjko")
theme_override_styles/pressed = ExtResource("4_vmjko")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_qnwuq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx2ii")
toggle_mode = true
action_mode = 0

[connection signal="pressed" from="Panel_Cover/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Panel_Cover/Button" to="." method="_on_button_toggled"]
